feat(excel): 补齐 Excel 能力（模板/导入/导出/在线编辑）+ excel_import/excel_export 工具
变更范围：两范式（ai-ui 后端 Agent Loop、ai-ui-vercel 前端 AI Runtime）+ 后端 ai-service。

新增模块（两范式各一份 src/utils/excel-io.js）：
- generateTemplate: 离线 Workbook + 内嵌 Excel 原生 DataValidation（下拉/数字范围/必填）
- importExcel: 表头归一化映射 + 类型转换 + 必填/选项校验 → batchSave 灌入
- exportExcelByRows / exportExcelMultiSheet: 离线 Workbook + ExcelIO.save
- 长选项兜底：colIdx+200 隐藏列 + DV 公式引用（规避 Excel List 255 字符上限）
- 大文件提示：>5MB 警告 + setTimeout(0) 让帧

UI 改造：
- StepViewDefs 加「下载 Excel 模板」「上传 Excel 导入」按钮
- StepResult 预览弹窗换成 SpreadSheet 组件，支持只读↔编辑切换 + 单/多 sheet 导出
- SchemaFormRenderer 新增 file 类型分支（el-upload .xlsx/.xls）
- main.js 注入 GC.Spread.Sheets.LicenseKey（VITE_SPREADJS_KEY，不入库）

AI 工具（11 → 13）：
- excel_import (IMPORT/ADD/MODIFY·VIEW_DEFS, INPUT 模式, 暂停渲染上传卡片)
- excel_export (EXPORT·RESULT, AUTO 自动执行, 单/多 sheet 合并导出)
- tools.yaml / scenarios.yaml / FrontendTools.java / AiService.java mode 推断同步更新

文档：
- README.md 工具清单 11→13，新增 Excel 能力段
- docs/design-and-implementation.md v1.1→v1.2，工具表格补两行

无敏感信息：API key 仍由 DEEPSEEK_API_KEY 环境变量注入，未硬编码。